test/soft-contract/ill-typed/intro3.caprice
(* TEST
  include refutable;
  skip; # requires wrapping, which is not yet implemented
*)


let f x g =
  g (x + 1)

let h (dependent z : int) (y : int | z > y) : unit = (* ERROR: should be `z < y` instead of other way around *)
  ()

let main (n : int) : unit =
  if n > 0
  then f n (h n)
  else ()
